# hikvision-rs

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: error.rs  lib.rs
