[package]
name = "hikvision-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PuffyWithEyes/hikvision-rs"
description = "High-level asynchronous library for controlling cameras from Hikvision using the PTZ API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
tokio = { version = "1.36", features = [] }


[lib]
name = "hikvision"
